--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       run: |
         for term in v ; do
           if cat README.md | grep -q -i "$term" ; then
-            echo "Found '$term' in README.md. '$term' is not allowed.
+            echo "Found '$term' in README.md. '$term' is not allowed."
             exit 1
           fi
         done
